# DCC_tester

./: .gitignore  .gitmodules  .mxproject  CMakeLists.txt  DCC_tester.code-workspace  DCC_tester.ioc  README.md  STM32H563xx_FLASH.ld  STM32H563xx_RAM.ld  TODO.md  compile_commands.json  gcc-arm-none-eabi.cmake  generate_code.bat  generate_code.ps1  generate_project.ps1  generate_project.txt  generatecode.txt  picolibc_threadx_lock.c  starm-clang.cmake
AZURE_RTOS/App/: app_azure_rtos.c  app_azure_rtos.h  app_azure_rtos_config.h
Core/Inc/: FreeRTOSConfig.h  FreeRTOSFATConfig.h  FreeRTOSIPConfig.h  OpenMRN_client.h  SUSI.h  analog_manager.h  app.h  app_freertos.h  app_threadx.h  cli.h  cli_app.h  cli_legacy_app.h  command_station.h  command_station.hpp  custom_write.h  decoder.h  decoder.hpp  fatfs.h  fatfs_platform.h  ffconf.h  legacy_mode.h  main.h  parameter_manager.h  rpc_server.h  rpc_server.hpp  rpc_transport_types.h  sd_diskio_config.h  send.cfg  stm32_lock_user.h  stm32h5xx_hal_conf.h  stm32h5xx_it.h  stm32h5xx_nucleo_conf.h  tx_user.h  usbx_cdc_transport.h  version.h.in
Core/Src/: OpenMRN_client.c  OpenMRN_client.cpp  SUSI_master.c  SUSI_slave.c  analog_manager.c  app.c  app_freertos.c  app_threadx.c  cli.c  cli_app.c  cli_legacy_app.c  cmsis_os2.c  command_station.cpp  custom_write.c  decoder.cpp  fatfs.c  freertos_hooks.c  legacy_mode.c  main.c  parameter_manager.c  rpc_server.cpp  sd_diskio.c  sd_diskio_dma_rtos.c  stm32h5xx_hal_msp.c  stm32h5xx_hal_timebase_tim.c  stm32h5xx_it.c  tx_initialize_low_level.S  xcli_app.c
Doc/: RPC_TEST_MESSAGES.txt  Sender Ph1.sch  readme.md
Drivers/CMSIS/Device/ST/STM32H5xx/Include/: stm32h5xx.h - Shortcut.lnk
FATFS/App/: fatfs.c  fatfs.h  xapp_filex.c
FileX/App/: app_filex.c  app_filex.h  fx_user.h
LWIP/App/: app_ethernet.c  lwip.c  lwip.h
NetXDuo/App/: app_netxduo.c  app_netxduo.h  nx_user.h
Scripts/: AcceptanceTestPacket.py  AcceptanceTestPacketAllStop.py  AcceptanceTestWithBit0Change.py  AcceptanceTestWithNBit0Change.py  ReadManufacturerIdCv.py  ReadManufacturerIdCvConfig.txt  RunAcceptanceTestWithOverride.py  RunAccessoryIOTest.py  RunAccessoryIOTestConfig.txt  RunAuxIOTest.py  RunAuxIOTestConfig.txt  RunBadBitTest.py  RunBadBitTestConfig.txt  RunFunctionIOTest.py  RunFunctionIOTestConfig.txt  RunInterPacketAcceptanceTest.py  RunInterPacketAcceptanceTestConfig.txt  RunInterPacketDelayTest.py  RunPacketAcceptanceTest.py  RunPacketAcceptanceTestConfig.txt  RunSetCommandStationParameters.py  RunSetCommandStationParametersConfig.txt  RunTimingMarginLoopTest.py  RunTimingMarginLoopTestConfig.txt  RunTimingMarginTest.py  RunTimingMarginTestConfig.txt  System.py  SystemConfig.txt  SystemRPCTest.py  Test Descriptions.txt  capture_screen.py  how_to_run_scripts.txt  howto.txt
Scripts/IO/: gpio_button_mirror.py
Scripts/PacketData/: AccessoryIOTest.py  AuxIOTest.py  BadBitTest.py  FunctionIOTest.py  InterPacketAcceptanceTest.py  InterPacketDelayTest.py  PacketAcceptanceTest.py  tests.txt
Scripts/PacketData/Motor Current Feedback/: PacketAcceptanceTest.py
Scripts/PacketData/NoMotor Voltage Feedback/: MotorIOTest.py  PacketAcceptanceTest.py
Scripts/PacketTiming/: tests.txt
Scripts/Utility/: SendEmergencyStop.py  TestNoMotorStop.py
Simulator/: .gitignore
USBPD/App/: usbpd.c  usbpd.h  usbpd_dpm_core.c  usbpd_dpm_core.h  usbpd_os_port_mx.h  usbpd_pdo_defs.h  usbpd_pwr_if.h  usbpd_usb_if.c  usbpd_usb_if.h
USBX/App/: app_usbx.c  app_usbx.h  app_usbx_device.c  app_usbx_device.h  ux_device_cdc_acm.c  ux_device_cdc_acm.h  ux_device_descriptors.c  ux_device_descriptors.h  ux_user.h  xapp_usbx_device.c
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
data/: Nucleo config.txt  RPC_TEST_MESSAGES.txt
example logs/PC/: acme.sum  help.sum  s_user.txt
example logs/PCDOS/: ACME.SUM  SEND.INI  S_USER.TXT
example logs/SD/: SEND.CFG  acme.sum  help.sum  s_user.txt
